assets/main.css
:root {
    --bg-color1: #242020;
    --bg-color2: #343030;
    --bg-color3: #444040;
    --fg-color: #e0e0e0;
    --accent-color1: #702020;
    --accent-color2: #a02020;
    --link-hover-color: #b0b0b0;
    --code-color: #e08080;
    --font-size: 12px;

    color: var(--fg-color);
    font-family: "Hack";
}

p:first-child, h1:first-child, h2:first-child, h3:first-child {
    margin-top: 0;
}
p:last-child, h1:last-child, h2:last-child, h3:last-child {
    margin-bottom: 0;
}
a, a:visited {
    color: var(--fg-color);
}
a:hover {
    color: var(--link-hover-color);
}

body {
    background-color: var(--bg-color1);
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 0;
}

.page {
    flex-grow: 1;
    max-width: 70rem;
    margin: 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

nav {
    background-color: var(--accent-color2);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.nav-links {
    padding: 1rem 1.5rem;
    display: flex;
    gap: 2rem;
    justify-content: space-between;
    align-items: center;
}

.nav-links a {
    text-decoration: none;
}

a.home-link {
    background-color: var(--accent-color1);
    padding: 1rem 1.5rem;
    font-size: 1.5rem;
    font-weight: bold;
    text-decoration: none;
}

main {
    background-color: var(--bg-color2);
    padding: 2rem;
}

.page-list {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}
.page-entry {
    background-color: var(--bg-color3);
}
.page-entry a {
    text-decoration: none;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.dates-header {
    display: flex;
    flex-direction: column;
}

.horiz-divider {
    height: 3px;
    background-color: var(--fg-color);
    margin-top: 2rem;
    margin-bottom: 2rem;
}

blockquote {
    border-left: 3px solid;
    padding-left: 1rem;
    margin-left: 2rem;
}

code {
    font-family: "Hack";
    font-size: 1rem;
}

pre {
    overflow: auto;
    background-color: var(--bg-color1);
    padding: 1rem;
}

p > code {
    color: var(--code-color);
}

